# src/pet_flow_backend/services/financial/datasources/entities/financial-transaction.entity.ts
@@ -1,11 +1,13 @@
 export class FinancialTransactionEntity {
   constructor(
     public id?: string,
+    public scheduling_id?: string,
+    public category?: string,
     public description?: string,
     public amount?: number,
-    public due_date?: Date,
+    public payment_date?: Date,
     public payment_method?: string,
-    public status?: string,
+    public employee_id?: string,
     public clinic_id?: string,
     public created_at?: Date,
   ) { }
