# src/pet_flow_backend/services/financial/domain/models/financial-transaction.ts
@@ -1,11 +1,13 @@
 export class FinancialTransaction {
   constructor(
     public id?: string,
+    public schedulingId?: string,
+    public category?: string,
     public description?: string,
     public amount?: number,
-    public dueDate?: Date,
+    public paymentDate?: Date,
     public paymentMethod?: string,
-    public status?: string,
+    public employeeId?: string,
     public clinicId?: string,
     public createdAt?: Date,
   ) { }
